2011-08-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, avtterm.c (avta_term_send_literal): new macro

	* avtterm.c: fix key F7, more refactoring

	* avtterm.c: code for mouse support (not working yet)

	* avatar.c (avt_initialize): don't ignore mouse button releases

2011-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c: refactoring

2011-08-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_mb_decode_buffer, avt_mb_encode_buffer):
	new functions
	(avt_mb_decode, avt_mb_encode): adapted

	* avtterm.c: optimization: use static buffer

	* lua/terminal.lua: no avatar

2011-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_mb_len, avt_decode): fixes

2011-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	fix config-mingw
	search lua in /usr/local/cross-tools/i386-mingw32/

2011-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_mb_len, avt_say_mb):
	do the charset conversion directly in avt_say_mb_len
	=> optimization: far less mallocs

	* avatar.c (avt_tell_mb): call avt_tell_mb_len

	* mingw/iconv.h, mingw/win_iconv.c:
	remove const from **inbuf

2011-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_recode, avt_mb_decode, avt_mb_encode):
	make them more consistent
	callers adapted

	* avatar.c (avt_say, avt_say_len, avt_tell_len):
	support for UTF-16 surrogates

2011-07-22  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (Playing, ShowRawImage)
	(ImageMaxWidth, ImageMaxHeight, getBackgroundColor):
	new functions

	* pascal/akfavatar.pas:
	fix: never call Halt in IO-functions or initialization

2011-07-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_recode): new function
	(avt_set_title): adapted

	* lua/lua-avt.c (lavt_recode => avt.recode): new function

2011-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-audio.c: